# real-transparencia

./: .env.example  .gitignore  AUDIT.md  COMPONENTS.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  ROADMAP.md  migrate_proposicoes.py  migrate_to_postgres.py  pyproject.toml  railway.json  verify_playwright.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  ideia.md
.github/workflows/: cd.yml  ci.yml
app/: agenda.py  ceap.py  config.py  db.py  main.py  queries.py  ui.py
app/analysis/: grok.py  llm.py  summaries.py
app/ingest/: __main__.py  camara.py  sources.py  tse.py
app/static/: app.js  overrides.css  portal.css  style.css
app/templates/: _busca_result.html  _components.html  _raiox_deputado.html  _raiox_gastos.html  _raiox_geral.html  _raiox_macros.html  _raiox_partido.html  base.html  componentes.html  deputado.html  deputado_gastos.html  deputados.html  eleicoes.html  feed.html  fornecedor.html  fornecedores.html  gastos.html  home.html  landing.html  partido_projetos.html  relatorio.html  relatorio_categoria.html  relatorio_partido.html  sugestoes.html  votacao.html  votacoes.html
design_system/: README.md  colors_and_type.css
design_system/preview/: _card.css  brand-logo-dark.html  brand-logo.html  colors-accent.html  colors-brand.html  colors-neutrals.html  colors-status.html  colors-viz.html  components-badges.html  components-buttons.html  components-cobre.html  (+12 more)
docs/: raiox_narrativa.md
tests/: conftest.py  test_db_helpers.py  test_faltas.py  test_ingest_idempotency.py  test_parsers.py  test_queries_smoke.py
(+12 files in other folders)
