[project]
name = "real-transparencia"
version = "0.1.0"
description = "Transparência da Câmara dos Deputados e TSE, legível para pessoas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = ["playwright>=1.60.0", "pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[project.scripts]
resumo-ingest = "app.ingest.__main__:main"
